<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/gamemode_imageBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageBackground_desc" />	
        
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:layout_width="@dimen/gamemode_linearLayoutNameWidth"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingBottom="@dimen/gamemode_linearLayoutNameBottomPadding" >
	
	        <TextView
	            android:id="@+id/gamemode_textViewEnterName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/gamemode_textViewEnterName"
	            android:textColor="#000000" />
	
	        <EditText
	            android:id="@+id/gamemode_editTextName"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="textPersonName"
	            android:textColor="#000000"
	            android:textColorHint="#000000" >
	
	            <requestFocus />
	        </EditText>
	
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/gamemode_buttonEasy"
	        android:layout_width="@dimen/gamemode_buttonWidth"
	        android:layout_height="wrap_content"
	        android:text="@string/gamemode_buttonEasy" />
	
	    <Button
	        android:id="@+id/gamemode_buttonNormal"
	        android:layout_width="@dimen/gamemode_buttonWidth"
	        android:layout_height="wrap_content"
	        android:text="@string/gamemode_buttonNormal" />
	
	    <Button
	        android:id="@+id/gamemode_buttonHard"
	        android:layout_width="@dimen/gamemode_buttonWidth"
	        android:layout_height="wrap_content"
	        android:text="@string/gamemode_buttonHard" />
	
	</LinearLayout>

</FrameLayout>