<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/instructions_imageBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageBackground_desc" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" >

		<TextView
		    android:id="@+id/instructions_textViewInstructions"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="@dimen/instructions_textViewInstructionsPadding"
		    android:text="@string/instructions_textViewInstructions"
		    android:textColor="#000000" />

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/instructions_textViewHowTo"
		    android:textColor="#000000" />

	</LinearLayout>
	
</FrameLayout>
