<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/scores_imageBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageBackground_desc" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/scores_textViewScores"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/scores_textViewScoresPadding"
	        android:text="@string/scores_textViewScore" />
	
	    <ScrollView
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:scrollbars="none" >
	
	        <TableLayout
	            android:id="@+id/scores_tableLayout"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:showDividers="end" >
	        </TableLayout>
	
	    </ScrollView>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingBottom="@dimen/scores_linearLayoutClearBackPadding"
	        android:paddingTop="@dimen/scores_linearLayoutClearBackPadding" >
	
	        <Button
	            android:id="@+id/scores_buttonClear"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/scores_buttonClear" />
	
	        <Button
	            android:id="@+id/scores_buttonBackToMainMenu"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/scores_buttonBackToMainMenu" />
	
	    </LinearLayout>
	
	</LinearLayout>

</FrameLayout>